	* schedule.h, audio/midi_drivers/mt32emu/part.h, objs/animate.h,
	  objs/mappatch.h: Several classes in need of virtual destructors.
	* singles.h: Game_singletons needs no destructor, virtual or otherwise.
	* gamewin.cc: Unused NPCs need to be manually deletedor they leak.
	* objs/objlist.h: Nearly 12-year-old massive leak when map got deleted (for
	  example, to load a new game).

2012-12-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* combat.cc: Fixed incorrect animation of slimes after they attacked.
	* actors.*, combat.cc, monster.cc: De-hard-coded slime and sea-serpent
	  shapes. Fixed incorrect sea serpent attack animation (with improvements
	  over the original game).
	* actors.cc, schedule.cc: Improvements to sitting down on barges. Facing of
	  NPCs is preserved on more cases. Move aside now ignores facing when it
	  determines if actor is sitting down, kneeling or lying down.
	* gamewin.cc: Change party members to standing on teleport (barges could be
	  activated by sitting on a barge, teleporting to another and activating
	  the new barge).

2012-12-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.cc: Walk-to-schedule caused instances of the sit-on-air bug because
	  it would teleport the NPC if off-screen and leave him/her sitting/lying down.
	* actors.cc: Fixed another case of potential sit-on-air source.
	* exult.cc: Fixed buildmap guard band issue.

2012-11-19 Dominik Reichardt <dominus@users.sourceforge.net>
	* exult.cc: added command line option to reset the video settings (patch by 
	  Malignant Manor).
	* win32/exult_installer.iss: "reset video settings" shortcut to the Exult 
	  Start Menu group on Windows (again thanks to Malignant Manor).
	  
2012-11-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* imagewin/scale_xbr.*: Performance improvements for NxBR scalers.

2012-11-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* varios files: added data/bg|si/autonotes.txt to game flx bundles and the 