@@ -39,6 +39,9 @@
 	* gamewin.cc: Unused NPCs need to be manually deletedor they leak.
 	* objs/objlist.h: Nearly 12-year-old massive leak when map got deleted (for
 	  example, to load a new game).
+	* objs/egg.cc, shapes/shapeinf/monstinf.cc: Allowing egg-spawned objects of
+	  NPC or monster classes to actually spawn as NPCs or monsters. Also, fixed
+	  default monster info for shapes that don't have it.
 
 2012-12-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* combat.cc: Fixed incorrect animation of slimes after they attacked.
